--- a/MeteoStyle/MeteoStyle.csproj
+++ b/MeteoStyle/MeteoStyle.csproj
@@ -72,13 +72,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Pages\WelcomePage.xaml.cs">
+	  <Compile Update="Views\WelcomePage.xaml.cs">
 	    <DependentUpon>WelcomePage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Pages\MainPage.xaml">
+	  <MauiXaml Update="Views\MainPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
